@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_TFTP_BLKSIZE (libcurl 7.19.4+).
+
         * Added CURLOPT_PROTOCOLS, CURLOPT_REDIR_PROTOCOLS and associated
           CURLPROTO_* constants, which require libcurl 7.19.4+.
 
